# qbittorrent-orphaned

./: AGENTS.md  CLAUDE.md  README.md  orphan_detector.py  pyproject.toml  requirements-test.txt  test_orphan_detector.py
.github/: dependabot.yml
.github/workflows/: test.yml  tests.yml
tests/: test_orphan_detector.py
